Good progress with the refactoring